# badapple-gba

./: .gitignore  Cargo.toml  flake.nix
badapple/: Cargo.toml
badapple/.cargo/: config.toml
badapple/src/: main.rs  utils.rs
converter/: Cargo.toml
converter/src/: filedef.rs  main.rs
patterns/: ba.hexpat
