[package]
name = "converter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "converter"
path = "src/main.rs"

[lib]
path = "src/filedef.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "6.1.1"
ndarray = "0.15.6"
video-rs = { version = "0.6.0", features = ["ndarray"] }

[dependencies.binrw]
version = "0.13.3"
default-features = false
